--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,6 +3,7 @@
   &-description {
     text-align: center;
     background: $color-white;
+    box-shadow: 2px 2px 15px rgba(110, 155, 162, 0.27);
     border-radius: 30px;
     max-width: 1103px;
     padding: 25px 50px;
