--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,4 +1,4 @@
-$main-color: #5fccdb;
+$main-color: #333;
 $border-color: #a8a8a8;
 $color-white: #fff;
 $box-shadow: 7px 8px 25px rgba(130, 195, 248, 0.3);
