--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -48,7 +48,7 @@
         width: 28px;
         height: 28px;
         margin-bottom: 5px;
-        fill: #5fccdb;
+        fill: $main-color;
       }
       &__text {
         font-family: 'Montserrat', 'Medium';
@@ -100,7 +100,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      img {
+      &__img {
         margin-right: 15px;
         width: 40px;
         height: 40px;
@@ -109,11 +109,26 @@
   }
 }
 .zoom {
-  color: #1391de;
+  $zoom-color: #00aff0;
+  color: $zoom-color;
+  .program-download__img,
+  .program-like__img {
+    fill: $zoom-color;
+  }
 }
 .skype {
-  color: #77d6ff;
+  $skype-color: #77d6ff;
+  color: $skype-color;
+  .program-download__img,
+  .program-like__img {
+    fill: $skype-color;
+  }
 }
 .whatsapp {
-  color: #43d854;
+  $whatsapp-color: #43d854;
+  color: $whatsapp-color;
+  .program-download__img,
+  .program-like__img {
+    fill: $whatsapp-color;
+  }
 }
