--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -53,6 +53,7 @@
       &__text {
         font-family: 'Montserrat', 'Medium';
         font-size: 14px;
+        color: $main-color;
       }
     }
     &-title {
@@ -76,6 +77,7 @@
       font-size: 15px;
       text-align: center;
       max-width: 300px;
+      color: $main-color;
     }
     &-more,
     &-download {
