--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -111,7 +111,7 @@
   }
 }
 .zoom {
-  $zoom-color: #00aff0;
+  $zoom-color: #158edd;
   color: $zoom-color;
   .program-download__img,
   .program-like__img {
@@ -119,7 +119,7 @@
   }
 }
 .skype {
-  $skype-color: #77d6ff;
+  $skype-color: #2196f3;
   color: $skype-color;
   .program-download__img,
   .program-like__img {
@@ -127,7 +127,7 @@
   }
 }
 .whatsapp {
-  $whatsapp-color: #43d854;
+  $whatsapp-color: #64b161;
   color: $whatsapp-color;
   .program-download__img,
   .program-like__img {
