--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -20,12 +20,21 @@ h3 {
   padding: 0;
 }
 
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+
 body {
   background: $color-white;
   font-family: 'Montserrat';
   color: $text-color;
 }
 
+.wrapper {
+  min-height: 100%;
+}
 .container {
   max-width: 1200px;
   margin: 0 auto;
@@ -34,6 +43,7 @@ body {
 @media (max-width: 768px) {
   body {
     background: $color-white;
+
     overflow-x: hidden !important;
   }
   .container {
