--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -3,8 +3,8 @@
   &-description {
     text-align: center;
     box-shadow: 2px 2px 15px rgba(110, 155, 162, 0.27);
-    max-width: 1103px;
     padding: 25px 50px;
+    border-radius: 15px;
     margin: 0 auto;
     &__title {
       font-weight: bold;
