--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -2,6 +2,7 @@
 @import '~animate.css';
 @import '_variables';
 @import 'header';
+@import 'advantages';
 @import 'burger';
 @import 'main';
 @import 'catalog';
