--- a/src/scss/advantages.scss
+++ b/src/scss/advantages.scss
@@ -17,6 +17,7 @@
 
 @media (max-width: 768px) {
   .advantages {
+    justify-content: center;
     &-block {
       margin-bottom: 35px;
       &__desc {
