--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -21,5 +21,9 @@
 @media (max-width: 768px) {
   .main {
     margin-top: 20px;
+    &-description {
+      box-shadow: none;
+      padding: 0;
+    }
   }
 }
