--- a/src/scss/advantages.scss
+++ b/src/scss/advantages.scss
@@ -22,6 +22,8 @@
       margin: 0;
       margin-bottom: 35px;
       border-radius: 15px;
+      box-shadow: 5px 4px 4px rgba(150, 150, 150, 0.25);
+      padding: 15px;
       &__desc {
         max-width: 100px;
         margin-top: 8px;
