--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -67,7 +67,7 @@
         fill: $color-white;
       }
       &__text {
-        font-family: 'Montserrat', 'Medium';
+        // font-family: 'Montserrat', 'Medium';
         font-size: 14px;
       }
     }
@@ -95,11 +95,10 @@
     }
     &-description,
     &-more {
-      font-family: Montserrat;
       margin-top: 20px;
     }
     &-description {
-      font-size: 15px;
+      font-size: 17px;
       text-align: center;
       max-width: 300px;
       color: $main-color;
@@ -176,7 +175,6 @@
           margin-right: 5px;
         }
         &__text {
-          font-family: 'Montserrat', 'Medium';
           font-size: 16px;
         }
       }
