--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Exo+2&display=swap');
 @import '~normalize.css';
 @import '~animate.css';
 @import '_variables';
@@ -29,7 +30,7 @@ body {
 
 body {
   background: $color-white;
-  font-family: 'Montserrat';
+  font-family: 'Exo 2', sans-serif;
   color: $text-color;
 }
 
