--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -60,7 +60,7 @@
       }
       &:hover {
         .program-like__img {
-          transform: scale(1.2);
+          transform: scale(1.3);
         }
       }
       &__img.active {
@@ -78,7 +78,7 @@
     }
 
     &-title {
-      font-family: 'Roboto';
+      font-family: 'Roboto', sans-serif;
       font-weight: bold;
       font-size: 32px;
     }
@@ -138,7 +138,7 @@
         color: $color-white;
         background: #5fccdb;
         .program-download__img {
-          fill: $color-white !important;
+          fill: $color-white;
         }
       }
     }
