--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,5 +2,5 @@ $main-color: #333;
 $border-color: #a8a8a8;
 $color-white: #fff;
 $box-shadow: 7px 8px 25px rgba(130, 195, 248, 0.3);
-$text-color: #4d4e58;
+$text-color: #6a6d8d;
 $color-mobile: #ecf4f9;
