--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -5,7 +5,9 @@
   &-title {
     color: #43a4b1;
     margin-bottom: 50px;
-    font-size: 25px;
+    font-size: 24px;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 500;
   }
   &-programs {
     display: flex;
