--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@
     padding: 25px 50px;
     border-radius: 15px;
     margin: 0 auto;
+    margin-bottom: 100px;
     &__title {
       font-weight: bold;
       font-size: 20px;
