--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -5,6 +5,7 @@
 @import '~animate.css';
 @import '_variables';
 @import 'header';
+@import 'search';
 @import 'advantages';
 @import 'burger';
 @import 'main';
