fix input mobile

--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -145,7 +145,7 @@
         opacity: 0;
       }
     }
-    &-input.active {
+    &-input.active-input {
       width: 90vw;
       background-position: right;
       background-position: 290px;
