--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -75,6 +75,15 @@
     color: $border-color;
     background-position: 200px;
   }
+
+  &-input.active-input {
+    box-shadow: 0px -6px 12px -2px rgba(0, 0, 0, 0.58);
+    border-radius: 0;
+    border-top-left-radius: 15px;
+    border-top-right-radius: 15px;
+    background: #333 url('../img/search.svg') no-repeat right;
+    background-position: 200px;
+  }
 }
 
 @media (max-width: 768px) {
@@ -138,6 +147,7 @@
       background: $color-mobile url('../img/search.svg') no-repeat center;
       color: $border-color;
       transition: 0.4s;
+      box-shadow: none;
       &__wrap {
         position: initial;
       }
@@ -147,10 +157,12 @@
     }
     &-input.active-input {
       width: 90vw;
+      background: $color-mobile;
       background-position: right;
       background-position: 290px;
       padding-left: 60px;
       padding-right: 50px;
+      box-shadow: none;
     }
   }
 }
