--- a/src/scss/search.scss
+++ b/src/scss/search.scss
@@ -1,5 +1,6 @@
 .search {
   position: absolute;
+
   &-none {
     text-align: center;
     margin-top: 10px;
@@ -12,9 +13,13 @@
     margin: 0;
     background: #333;
     border-radius: 15px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
     padding: 10px 15px 20px 15px;
+    box-shadow: 0px 7px 12px -2px rgba(0, 0, 0, 0.58);
     width: 241px;
     list-style: none;
+    margin-top: 0px;
   }
   &-icon {
     width: 25px;
@@ -43,10 +48,11 @@
   .search {
     position: absolute;
     right: 4%;
-    top: 80px;
+    top: 77px;
     &-items {
       background: $color-mobile;
       width: 259px;
+      box-shadow: none;
     }
 
     &-item {
