--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,3 +4,4 @@ $color-white: #fff;
 $box-shadow: 7px 8px 25px rgba(130, 195, 248, 0.3);
 $text-color: #707070;
 $color-mobile: #ecf4f9;
+$color-button-icon: #5fccdb;
