--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,7 +1,7 @@
 .header {
   color: $color-white;
   background: $main-color;
-  box-shadow: 5px 5px 15px rgba(4, 4, 4, 0.3);
+  // box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   padding: 15px 0;
   position: fixed;
   top: 0;
@@ -53,6 +53,7 @@
       width: 0px;
       height: 2px;
       transition: 0.5s;
+      margin-top: 3px;
     }
     &__program,
     &__tags,
