--- a/src/scss/search.scss
+++ b/src/scss/search.scss
@@ -11,7 +11,7 @@
   &-items {
     padding: 0;
     margin: 0;
-    background: #333;
+    background: $main-color;
     border-radius: 15px;
     border-top-left-radius: 0;
     border-top-right-radius: 0;
