--- a/src/scss/header.scss
+++ b/src/scss/header.scss
@@ -1,7 +1,6 @@
 .header {
   color: $color-white;
   background: $main-color;
-  // box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   padding: 15px 0;
   position: fixed;
   top: 0;
@@ -19,16 +18,18 @@
   &-info {
     display: flex;
     align-items: center;
+    &:hover {
+      color: tomato;
+      .header-logo {
+        fill: tomato;
+      }
+    }
   }
   &-logo {
     height: 35px;
     width: 35px;
     fill: $color-white;
     margin-right: 20px;
-    cursor: pointer;
-    &:hover {
-      fill: tomato;
-    }
   }
   &-title {
     font-size: 30px;
@@ -62,7 +63,7 @@
       top: 42px;
       padding: 0;
       margin: 0;
-      background: #333;
+      background: $main-color;
       border-radius: 15px;
       border-top-left-radius: 0;
       border-top-right-radius: 0;
@@ -116,7 +117,7 @@
     border-radius: 0;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    background: #333 url('../img/search.svg') no-repeat right;
+    background: $main-color url('../img/search.svg') no-repeat right;
     background-position: 200px;
   }
 }
