--- a/src/scss/catalog.scss
+++ b/src/scss/catalog.scss
@@ -190,7 +190,7 @@
   }
 }
 .whatsapp {
-  $whatsapp-color: #64b161;
+  $whatsapp-color: #55cd6c;
   .program-title {
     color: $whatsapp-color;
   }
